<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroud">


            <android.support.design.card.MaterialCardView
                android:id="@+id/cardView1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginTop="@dimen/_24dp"
                android:layout_marginEnd="@dimen/_16dp"
                android:padding="@dimen/_8dp"
                android:visibility="gone"
                app:cardCornerRadius="@dimen/_8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"

                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView"
                        style="@style/TextAppearance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8dp"
                        android:layout_marginTop="@dimen/_8dp"
                        android:text="@string/team_info"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/view_height"
                        android:layout_marginTop="8dp"
                        android:background="@color/grey"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16dp"
                        android:layout_marginTop="@dimen/_8dp"
                        android:text="@string/name"
                        android:textSize="@dimen/_14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view" />

                    <TextView
                        android:id="@+id/team_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8dp"
                        android:layout_marginTop="@dimen/_8dp"
                        android:layout_marginEnd="@dimen/_16dp"
                        android:text="@string/team_name"
                        android:textAlignment="textEnd"
                        android:textColor="@color/colorAccent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView3"
                        app:layout_constraintTop_toBottomOf="@+id/view" />

                    <View
                        android:id="@+id/view3"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/view_height"
                        android:layout_marginStart="@dimen/_16dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="@dimen/_16dp"
                        android:background="@color/grey"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView3" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16dp"
                        android:layout_marginTop="@dimen/_8dp"
                        android:text="@string/address"
                        android:textSize="@dimen/_14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view3" />

                    <TextView
                        android:id="@+id/team_address"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8dp"
                        android:layout_marginTop="@dimen/_8dp"
                        android:layout_marginEnd="@dimen/_16dp"
                        android:ellipsize="end"
                        android:text="@string/team_address"
                        android:textAlignment="textEnd"
                        android:textColor="@color/colorAccent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView3"
                        app:layout_constraintTop_toBottomOf="@+id/view3" />

                    <View
                        android:id="@+id/view4"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/view_height"
                        android:layout_marginStart="@dimen/_16dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="@dimen/_16dp"
                        android:background="@color/grey"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView5" />


                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16dp"
                        android:layout_marginTop="@dimen/_8dp"
                        android:text="@string/color"
                        android:textSize="@dimen/_14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view4" />

                    <TextView
                        android:id="@+id/team_color"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8dp"
                        android:layout_marginTop="@dimen/_8dp"
                        android:layout_marginEnd="@dimen/_16dp"
                        android:text="@string/team_color"
                        android:textAlignment="textEnd"
                        android:textColor="@color/colorAccent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView3"
                        app:layout_constraintTop_toBottomOf="@+id/view4" />

                    <View
                        android:id="@+id/view5"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/view_height"
                        android:layout_marginStart="@dimen/_16dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="@dimen/_16dp"
                        android:background="@color/grey"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView6" />


                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16dp"
                        android:layout_marginTop="@dimen/_8dp"
                        android:text="@string/venue"
                        android:textSize="@dimen/_14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view5" />

                    <TextView
                        android:id="@+id/team_venue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8dp"
                        android:layout_marginTop="@dimen/_8dp"
                        android:layout_marginEnd="@dimen/_16dp"
                        android:text="@string/team_venue"
                        android:textAlignment="textEnd"
                        android:textColor="@color/colorAccent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView3"
                        app:layout_constraintTop_toBottomOf="@+id/view5" />

                    <View
                        android:id="@+id/view6"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/view_height"
                        android:layout_marginStart="@dimen/_16dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="@dimen/_16dp"
                        android:background="@color/grey"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView7" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="@dimen/_24dp"
                        android:layout_height="@dimen/_24dp"
                        android:layout_marginTop="@dimen/_8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="@dimen/_8dp"
                        android:src="@drawable/ic_public_black_24dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/teamWeb"
                        app:layout_constraintTop_toBottomOf="@+id/view6" />

                    <TextView
                        android:id="@+id/teamWeb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="@dimen/_8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/web"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view6" />


                </android.support.constraint.ConstraintLayout>
            </android.support.design.card.MaterialCardView>


            <android.support.design.card.MaterialCardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"

                android:layout_marginTop="@dimen/_32dp"
                android:layout_marginEnd="@dimen/_16dp"
                android:minHeight="300dp"
                android:visibility="gone"
                app:cardCornerRadius="@dimen/_8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView1">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"

                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/TextAppearance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8dp"
                        android:layout_marginTop="@dimen/_8dp"
                        android:text="@string/team_squad"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/view2"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/view_height"
                        android:layout_marginTop="8dp"
                        android:background="@color/grey"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_8dp"
                        android:layout_marginTop="@dimen/_8dp"
                        android:layout_marginEnd="@dimen/_8dp"
                        android:layout_marginBottom="@dimen/_8dp"
                        app:layout_constraintBottom_toBottomOf="parent"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view2"
                        tools:listitem="@layout/item_team_squad_list" />
                </android.support.constraint.ConstraintLayout>
            </android.support.design.card.MaterialCardView>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </android.support.constraint.ConstraintLayout>


    </android.support.v4.widget.NestedScrollView>
</layout>